# NeuroAI

./: .gitattributes  package-lock.json  package.json  pyproject.toml
backend/: analyzer.py  demo.py  enrichment.py  llm.py  main.py  models.py  prompt_builder.py  server.py  stt.py  tts.py
frontend/: avatar.html  avatar.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/chats/: page.tsx
src/app/session/models/: page.tsx
src/app/session/select/: page.tsx
src/app/video/: page.tsx
src/components/: Avatar3D.tsx  RealisticAvatar.tsx  TalkingAvatar.tsx  VrmAvatar.tsx
