[project]
name = "neuroavatar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "google-generativeai>=0.8.6",
    "huggingface-hub>=1.8.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "uvicorn>=0.42.0",
    "whisper>=1.1.10",
]
